# get-uuid

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md  vcpkg.json
.github/workflows/: codeql-analysis.yml  get-uuid-buid.yml  get-uuid-build.yml
src/: get-uuid.cc
